# purebred-mailcap

./: CHANGELOG.md  README.md  default.nix  flake.nix  purebred-mailcap.cabal
.github/workflows/: haskell-ci.yml
.nix/: nixpkgs.nix  purebred-mailcap.nix
app/: Main.hs
src/Data/: Mailcap.hs  RFC1524.hs
src/Data/Mailcap/: Command.hs  Internal.hs  ViewCommand.hs
src/Data/RFC1524/: Internal.hs  ViewCommand.hs
tests/: Main.hs  ViewCommand.hs
