cabal-version:      2.4
name:               purebred-mailcap
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Róman Joost
maintainer:         roman@bromeco.de
tested-with:
  GHC ==8.8.4 || ==8.10.4 || ==9.0.1

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Mailcap
                    , Data.RFC1524
                    , Data.RFC1524.Internal

    build-depends:    base >= 4.11 && < 5
                    , attoparsec
                    , text
                    , bytestring
                    , case-insensitive
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options: -Wall -Wredundant-constraints
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
    base
    , attoparsec
    , text
    , purebred-mailcap
    , time

    , tasty
    , tasty-hunit

executable purebred-mailcap
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.11 && < 5
                    , text
                    , purebred-mailcap

    hs-source-dirs:   app
    default-language: Haskell2010
