cabal-version:      2.4
name:               purebred-mailcap
version:            0.1.0.0
synopsis:           A parser for parsing mailcap (RFC1524) files
description:
  A library to parse mailcap files (see RFC1524)
  .
  Things that are work in progress:
  .
  - RFC1524 mailcap files parsing

homepage:           https://github.com/purebred-mua/purebred-mailcap
bug-reports:        https://github.com/purebred-mua/purebred-mailcap/issues
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Róman Joost
maintainer:         roman@bromeco.de
tested-with:
  GHC ==8.8.4 || ==8.10.4 || ==9.0.1

copyright:           Copyright 2022 Róman Joost
category:            Data, Email
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/purebred-mua/purebred-mailcap.git

library
    exposed-modules:  Data.Mailcap
                    , Data.Mailcap.Internal
                    , Data.Mailcap.ViewCommand

    build-depends:    base >= 4.11 && < 5
                    , attoparsec
                    , text
                    , bytestring
                    , case-insensitive
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options: -Wall -Wredundant-constraints
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    ViewCommand
  build-depends:
    base
    , attoparsec
    , text
    , purebred-mailcap
    , time

    , tasty
    , tasty-hunit

executable purebred-mailcap
    main-is:          Main.hs

    build-depends:    base >= 4.11 && < 5
                    , bytestring
                    , purebred-mailcap

    hs-source-dirs:   app
    default-language: Haskell2010
